# NeuralNote

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PACKAGING.md  README.md  SIGNING.md  _clang-format  build.bat  build.sh  sign.macos.sh  sign_and_package_neuralnote_macos.sh
Apps/: CMakeLists.txt
Apps/AudioAppTemplate/: CMakeLists.txt
Apps/AudioAppTemplate/Source/: CommonHeader.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h
Apps/AutomaticBinaryData/: CMakeLists.txt
Apps/AutomaticBinaryData/Source/: BinaryHelper.h  CommonHeaders.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h
Apps/ConsoleAppTemplate/: CMakeLists.txt
Apps/ConsoleAppTemplate/Source/: Main.cpp
Apps/CustomModuleTest/: CMakeLists.txt
Apps/CustomModuleTest/Source/: CommonHeader.h  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h
Apps/DynamicLibrary/: CMakeLists.txt
Apps/DynamicLibrary/Source/: DLL.cpp  Main.cpp
Apps/GuiAppTemplate/: CMakeLists.txt
Apps/GuiAppTemplate/Source/: CommonHeader.h  HelloWorldLabel.h  MainComponent.cpp  MainComponent.h
Apps/GuiAppTemplate/Window/: Main.cpp  MainWindow.cpp  MainWindow.h
Apps/SideThreadPaint/: CMakeLists.txt
Apps/SideThreadPaint/Source/: MainComponent.cpp  MainComponent.h
Audio2Midi/: CMakeLists.txt
Audio2Midi/Model/: BasicPitchCNN.cpp  BasicPitchCNN.h  Features.cpp  Features.h
Audio2Midi/ModelData/: cnn_contour_model.json  cnn_onset_1_model.json  features_model.onnx
Audio2Midi/PluginSources/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProcessorBase.cpp  ProcessorBase.h
Audio2Midi/Source/: Parameters.h  PluginProcessor.cpp  PluginProcessor.h  ProcessorBase.cpp  ProcessorBase.h
Audio2Midi/Source/Components/: Audio2MidiMainView.cpp  Audio2MidiMainView.h  AudioRegion.cpp  AudioRegion.h  CombinedAudioMidiRegion.cpp  CombinedAudioMidiRegion.h  MidiFileDrag.cpp  MidiFileDrag.h  NeuralNoteLNF.cpp  PianoRoll.cpp  PianoRoll.h  VisualizationPanel.cpp  VisualizationPanel.h
Audio2Midi/Source/Components/ControlViews/: TranscriptionOptionsView.cpp
Audio2Midi/Source/Components/Views/: NoteOptionsView.cpp  NoteOptionsView.h  RhythmOptionsView.cpp  RhythmOptionsView.h  TranscriptionOptionsView.cpp  TranscriptionOptionsView.h  VisualizationPanel.cpp  VisualizationPanel.h
Brainstorm UX UI/: Parameters.md
CMake/: Findcatch2.cmake  Findjuce.cmake
Installers/: intro.txt  license.txt  readme.txt
Installers/Mac/: NeuralNote.pkgproj
Installers/Windows/: neuralnote.iss
Lib/Components/: Keyboard.cpp  Keyboard.h  Knob.cpp  Knob.h  MinMaxNoteSlider.cpp  MinMaxNoteSlider.h  QuantizeForceSlider.cpp  QuantizeForceSlider.h  RotarySlider.cpp  RotarySlider.h  UIDefines.cpp  UIDefines.h
Lib/DSP/: DownSampler.cpp  DownSampler.h  Resampler.cpp  Resampler.h
Lib/MidiFile/: MidiFileWriter.cpp  MidiFileWriter.h
Lib/MidiPostProcessing/: NoteOptions.cpp  NoteOptions.h  RhythmOptions.cpp  RhythmOptions.h
Lib/Model/: BasicPitch.cpp  BasicPitch.h  BasicPitchCNN.cpp  BasicPitchCNN.h  Constants.h  Features.cpp  Features.h  Notes.cpp  Notes.h  Utils.h
Lib/ModelData/: cnn_contour_model.json  cnn_note_model.json  cnn_onset_1_model.json  cnn_onset_2_model.json
Lib/Player/: Player.cpp  Player.h  SynthController.cpp  SynthController.h  SynthVoice.cpp  SynthVoice.h
Lib/Synth/: Synth.cpp  Synth.h  SynthController.cpp  SynthController.h  SynthVoice.cpp  SynthVoice.h
Lib/Utils/: AudioFileLoader.cpp  AudioFileLoader.h  AudioUtils.cpp  AudioUtils.h  NoteUtils.h  RhythmUtils.h  TimeQuantizeUtils.h
Modules/: CMakeLists.txt
Modules/custom_module_test/: custom_module_test.cpp  custom_module_test.h
Modules/custom_module_test/Source/: DummyLabel.cpp  DummyLabel.h
Modules/shared_plugin_helpers/: shared_plugin_helpers.cpp  shared_plugin_helpers.h
Modules/shared_plugin_helpers/ProcessorBase/: Helpers.h  ProcessorBase.cpp  ProcessorBase.h
Modules/shared_processing_code/: shared_processing_code.cpp  shared_processing_code.h
Modules/shared_processing_code/Source/: WhiteNoise.cpp  WhiteNoise.h
NeuralNote/PluginSources/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProcessorBase.cpp  ProcessorBase.h
NeuralNote/Source/: NeuralNoteTooltips.h  NnId.h  ParameterHelpers.h  Player.cpp  Player.h  RhythmOptions.cpp  RhythmOptions.h  SourceAudioManager.cpp  SourceAudioManager.h  SynthController.cpp  SynthController.h  TimeQuantizeOptions.cpp  TimeQuantizeOptions.h  TranscriptionManager.cpp  TranscriptionManager.h
NeuralNote/Source/Components/: AudioRegion.cpp  AudioRegion.h  CombinedAudioMidiRegion.cpp  CombinedAudioMidiRegion.h  MidiFileDrag.cpp  MidiFileDrag.h  NeuralNoteLNF.cpp  NeuralNoteLNF.h  NeuralNoteMainView.cpp  NeuralNoteMainView.h  NumericTextEditor.h  PianoRoll.cpp  PianoRoll.h  Playhead.cpp  Playhead.h  UpdateCheck.cpp  UpdateCheck.h
NeuralNote/Source/MidiFile/: MidiFileWriter.h
Plugins/: CMakeLists.txt
Plugins/CustomStandaloneFilter/: CMakeLists.txt
Plugins/CustomStandaloneFilter/Source/: ConfigurationHelpers.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PropertiesFileOptions.h  StandaloneFilter.cpp  StandaloneFilter.h
Plugins/DummySynth/: CMakeLists.txt
Plugins/DummySynth/Source/: PluginProcessor.cpp  PluginProcessor.h
Plugins/MaxParametersPlugin/: CMakeLists.txt
Plugins/MaxParametersPlugin/Source/: PluginProcessor.cpp  PluginProcessor.h
Plugins/MidiFXTemplate/: CMakeLists.txt
Plugins/MidiFXTemplate/Source/: PluginProcessor.cpp  PluginProcessor.h
Plugins/MinimalPluginTemplate/: CMakeLists.txt
Plugins/NewPluginTemplate/: CMakeLists.txt
Plugins/NewPluginTemplate/Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/PluginWithCustomModule/: CMakeLists.txt
Tests/: CMakeLists.txt  Tests.cpp  cnn_test.h  features_test.h  gen_note_events.py  notes_test.h  perf_test.h  test_utils.h
Tests/test_data/: contours.csv  input_audio.csv  note_events.input.json  note_events.output.json  notes.csv  onsets.csv
(+16 files in other folders)
